--- a/app/src/main/res/menu/terminal_menu.xml
+++ b/app/src/main/res/menu/terminal_menu.xml
@@ -23,7 +23,11 @@
     <item
         android:id="@+id/action_claude_help"
         android:title="@string/menu_help"
-        android:icon="@drawable/ic_help"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_share"
+        android:title="Share"
         app:showAsAction="never" />
         
 </menu>
