--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -44,9 +44,8 @@
         <item name="windowNoTitle">true</item>
     </style>
 
-        <!-- Dialog theme -->
-        <style name="Theme.TermuxAI.Dialog" parent="Theme.Material3.MaterialComponents.Light.Dialog">
-            <item name="colorPrimary">@color/claude_accent</item>
+            <!-- Dialog theme -->
+            <style name="Theme.TermuxAI.Dialog" parent="Theme.Material3.AlertDialog.Light">            <item name="colorPrimary">@color/claude_accent</item>
             <item name="android:colorBackground">@color/panel_background</item>
             <item name="colorSurface">@color/panel_background</item>
         </style>
